--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -15,6 +15,9 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="second-part.css"/>
+    <link rel="stylesheet" href="about.css"/>
+    <link rel="stylesheet" href="finaly.css"/>
 
     <script type="importmap">
         {
@@ -63,44 +66,56 @@
     <div class=" section-next pratas-3d ">
         <div class="section-inner">
 
-            <div class="description">
-                <h2 class="title-item"></h2>
-                <p class="description-item"></p>
-
-                <a href="https://wa.me/557791474668?text=Olá!
-                " target="_blank"><button class="btn-know">Saber mais</button></a>
-            </div>
-            <div class="viewport-3d">
-                <canvas id="viewer-3d" class="viewer-3d"></canvas>
-
-                <div class="circle-1 circle"></div>
-                <div class="circle-2 circle"></div>
-                <div class="circle-3 circle"></div>
-            </div>
-
-            <div class="nav-3d">
-                <div class="star">⭐⭐⭐⭐⭐</div>
-                <div class="nav-buttons">
-                    <button class="btn-prev"> <svg width="26" height="45" viewBox="0 0 26 45" fill="none"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M0.87868 19.9706C-0.292893 21.1422 -0.292893 23.0417 0.87868 24.2132L19.9706 43.3051C21.1421 44.4767 23.0416 44.4767 24.2132 43.3051C25.3848 42.1335 25.3848 40.2341 24.2132 39.0625L7.24264 22.0919L24.2132 5.12136C25.3848 3.94978 25.3848 2.05029 24.2132 0.878716C23.0416 -0.292858 21.1421 -0.292858 19.9706 0.878716L0.87868 19.9706ZM3.25037 25.0919C4.90722 25.0919 6.25037 23.7488 6.25037 22.0919C6.25037 20.4351 4.90722 19.0919 3.25037 19.0919L3.25037 22.0919L3.25037 25.0919ZM3 22.0919L3 25.0919H3.25037L3.25037 22.0919L3.25037 19.0919H3L3 22.0919Z"
-                                fill="#C9C8C8" />
-                        </svg>
-                    </button>
-
-                    <svg width="1" height="70" viewBox="0 0 1 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <line x1="0.5" x2="0.5" y2="70" stroke="white" />
-                    </svg>
-
-
-                    <button class="btn-next"><svg width="26" height="45" viewBox="0 0 26 45" fill="none"
-                            xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M21.8416 19.0919C20.1847 19.0919 18.8416 20.4351 18.8416 22.0919C18.8416 23.7488 20.1847 25.0919 21.8416 25.0919V22.0919V19.0919ZM24.2132 24.2132C25.3848 23.0417 25.3848 21.1422 24.2132 19.9706L5.12136 0.878716C3.94978 -0.292858 2.05029 -0.292858 0.878716 0.878716C-0.292858 2.05029 -0.292858 3.94978 0.878716 5.12136L17.8493 22.0919L0.878716 39.0625C-0.292858 40.2341 -0.292858 42.1335 0.878716 43.3051C2.05029 44.4767 3.94978 44.4767 5.12136 43.3051L24.2132 24.2132ZM21.8416 22.0919V25.0919H22.0919V22.0919V19.0919H21.8416V22.0919Z"
-                                fill="#C9C8C8" />
-                        </svg>
-                    </button>
+            <div class="scroll-content-wrapper">
+                <div class="image-column">
+                    <div class="image-wrapper">
+                        <img src="assets/itens/colar1.jpeg" alt="Anel Minimalista" class="scroll-image active">
+                        <img src="assets/itens/colar2.jpeg" alt="Colar Exclusivo" class="scroll-image">
+                        <img src="assets/itens/pulseira1.jpeg" alt="Pulseira Delicada" class="scroll-image">
+                        <img src="assets/itens/pulseira2.jpeg" alt="Brincos Elegantes" class="scroll-image">
+                        <!-- Adicione mais imagens conforme necessário -->
+                    </div>
+                </div>
+                <div class="text-column">
+                    <div class="text-block active">
+                        <span>01</span>
+                        <h2>Colar Corrente Delicada</h2>
+                        <p>Este colar exibe uma simplicidade refinada, ideal para uso diário ou para adicionar um toque
+                            de graciosidade a qualquer visual.
+                        </p>
+                        <a 
+                            href="https://wa.me/557791474668?text=Olá!" 
+                            target="_blank">saber mais...</a>
+                    </div>
+                    <div class="text-block">
+                        <span>02</span>
+                        <h2>Colar Malha Serpente</h2>
+                        <p>Com um design liso e fluído, este colar envolve o pescoço com um brilho elegante, oferecendo
+                            um toque moderno e sofisticado para qualquer ocasião.</p>
+                        <a 
+                            href="https://wa.me/557791474668?text=Olá!" 
+                            target="_blank">saber mais...</a>
+                    </div>
+                    <div class="text-block">
+                        <span>03</span>
+                        <h2>Pulseira Árvore da Vida Radiante</h2>
+                        <p>Com um design delicado e um pingente adornado com pedras brilhantes, esta pulseira é um
+                            símbolo de vitalidade e beleza, perfeita para quem busca um acessório com significado e
+                            esplendor.</p>
+                        <a 
+                            href="https://wa.me/557791474668?text=Olá!" 
+                            target="_blank">saber mais...</a>
+                    </div>
+                    <div class="text-block">
+                        <span>04</span>
+                        <h2>Pulseira Elo Mariner Elegante</h2>
+                        <p>Esta pulseira apresenta uma sequência de elos retangulares e ovais, combinando um estilo
+                            náutico clássico com uma sofisticação moderna, ideal para um visual distinto e marcante.</p>
+                        <a 
+                            href="https://wa.me/557791474668?text=Olá!" 
+                            target="_blank">saber mais...</a>
+                    </div>
+                    <!-- Adicione mais blocos de texto conforme necessário -->
                 </div>
             </div>
         </div>
@@ -108,7 +123,7 @@
 
     <div class="about">
         <div class="about-initial">
-            <h1>Porque o nome Argyros?</h1>
+            <h1>Porque o nome <span class="name-company">Argyros</span>?</h1>
         </div>
         <div class="about-2">
             <img class="star1" src="assets/star.png">
