change photo background

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.155.0/examples/jsm/"
         }
         }
-        </script>
+    </script>
 
 </head>
 
@@ -58,8 +58,7 @@
         <div class="contain-home-text">
             <h1 class="title">Luxo leve, Estilo forte</h1>
             <h2 class="subtitle">A peça perfeita para elevar sua identidade com brilho sutil.</h2>
-            <a href="https://wa.me/557791474668?text=Olá!
-                " target="_blank"><button class="btn-meet">Conhecer produtos</button></a>
+            <a href="https://www.exposy.com.br/Argyros" target="_blank"><button class="btn-meet">Conhecer produtos</button></a>
         </div>
     </div>
 
@@ -84,7 +83,7 @@
                             de graciosidade a qualquer visual.
                         </p>
                         <a 
-                            href="https://wa.me/557791474668?text=Olá!" 
+                            href="https://www.exposy.com.br/Argyros"
                             target="_blank">saber mais...</a>
                     </div>
                     <div class="text-block">
@@ -93,7 +92,7 @@
                         <p>Com um design liso e fluído, este colar envolve o pescoço com um brilho elegante, oferecendo
                             um toque moderno e sofisticado para qualquer ocasião.</p>
                         <a 
-                            href="https://wa.me/557791474668?text=Olá!" 
+                            href="https://www.exposy.com.br/Argyros"
                             target="_blank">saber mais...</a>
                     </div>
                     <div class="text-block">
@@ -103,7 +102,7 @@
                             símbolo de vitalidade e beleza, perfeita para quem busca um acessório com significado e
                             esplendor.</p>
                         <a 
-                            href="https://wa.me/557791474668?text=Olá!" 
+                            href="https://www.exposy.com.br/Argyros"
                             target="_blank">saber mais...</a>
                     </div>
                     <div class="text-block">
@@ -112,7 +111,7 @@
                         <p>Esta pulseira apresenta uma sequência de elos retangulares e ovais, combinando um estilo
                             náutico clássico com uma sofisticação moderna, ideal para um visual distinto e marcante.</p>
                         <a 
-                            href="https://wa.me/557791474668?text=Olá!" 
+                            href="https://www.exposy.com.br/Argyros"
                             target="_blank">saber mais...</a>
                     </div>
                     <!-- Adicione mais blocos de texto conforme necessário -->
